Fixed cross browser compat issue for background
Circles were too blurred but zen put like a limit on how blur something
could get but chrome based browsers didnt so the shit was basically
fucking invisible on chrome

--- a/frontend/src/styles/background.css
+++ b/frontend/src/styles/background.css
@@ -16,7 +16,7 @@
   border-radius: 100%;
   position: absolute;
 
-  filter: blur(500px);
+  filter: blur(100px);
 
   &:nth-child(1) {
     top: -12.5%;
